--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "starter-template",
+  "name": "shop-zilla",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "firebase": "^9.15.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0"
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
