--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^6.0.1",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.5",
