--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "firebase": "^9.15.0",
     "node-sass": "^6.0.1",
     "notiflix": "^3.2.6",
@@ -17,7 +22,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.0",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "stripe": "^11.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
