added stripe option

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "stripe": "^11.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:frontend": "react-scripts start",
+    "start:backend": "nodemon server.js",
+    "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
