--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
@@ -16,6 +17,7 @@
     "node-sass": "^6.0.1",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
